--- a/pom.xml
+++ b/pom.xml
@@ -16,20 +16,18 @@
         <dependency>
             <groupId>org.teamapps</groupId>
             <artifactId>teamapps-application-server</artifactId>
-            <version>0.11</version>
+            <version>0.14</version>
         </dependency>
         <dependency>
             <groupId>org.teamapps</groupId>
             <artifactId>teamapps-emoji-icon-provider</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-<!--
-        <dependency>
+<!--        <dependency>
             <groupId>org.teamapps</groupId>
             <artifactId>teamapps-icons</artifactId>
             <version>1.3</version>
-        </dependency>
-        -->
+        </dependency>-->
     </dependencies>
 
 
