--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
         </dependency>
         <dependency>
             <groupId>org.teamapps</groupId>
-            <artifactId>teamapps-emoji-icon-provider</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>teamapps-emoji-icons</artifactId>
+            <version>1.1</version>
         </dependency>
 <!--        <dependency>
             <groupId>org.teamapps</groupId>
