--- a/pom.xml
+++ b/pom.xml
@@ -16,18 +16,45 @@
         <dependency>
             <groupId>org.teamapps</groupId>
             <artifactId>teamapps-application-server</artifactId>
-            <version>0.14</version>
+            <version>0.34</version>
+        </dependency>
+        <dependency>
+            <groupId>org.teamapps</groupId>
+            <artifactId>teamapps-core-system</artifactId>
+            <version>0.7</version>
         </dependency>
         <dependency>
             <groupId>org.teamapps</groupId>
             <artifactId>teamapps-emoji-icons</artifactId>
             <version>1.1</version>
         </dependency>
-<!--        <dependency>
+        <dependency>
             <groupId>org.teamapps</groupId>
-            <artifactId>teamapps-icons</artifactId>
-            <version>1.3</version>
-        </dependency>-->
+            <artifactId>teamapps-server-jetty-embedded</artifactId>
+            <version>0.9.159</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>19.0.0</version>
+        </dependency>
+        <!--
+                <dependency>
+                    <groupId>org.teamapps</groupId>
+                    <artifactId>teamapps-application-api</artifactId>
+                    <version>0.77</version>
+                </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>19.0.0</version>
+        </dependency>
+        -->
+        <!--        <dependency>
+                    <groupId>org.teamapps</groupId>
+                    <artifactId>teamapps-icons</artifactId>
+                    <version>1.3</version>
+                </dependency>-->
     </dependencies>
 
 
