--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,16 @@
             <artifactId>annotations</artifactId>
             <version>19.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.18.0</version>
+        </dependency>
         <!--
                 <dependency>
                     <groupId>org.teamapps</groupId>
